Desenvolvimento do Cadastro de Usuário

--- a/Apollo/Apollo.csproj
+++ b/Apollo/Apollo.csproj
@@ -59,6 +59,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="frmCadastroUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCadastroUser.Designer.cs">
+      <DependentUpon>frmCadastroUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
+    <EmbeddedResource Include="frmCadastroUser.resx">
+      <DependentUpon>frmCadastroUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDashboard.resx">
       <DependentUpon>frmDashboard.cs</DependentUpon>
     </EmbeddedResource>
